--- a/homepage.css
+++ b/homepage.css
@@ -1,12 +1,12 @@
 body {
     color: #666666;
     background-color: #f9f8f6;
-    background-image: url("https://cdn.discordapp.com/attachments/927807364835455027/930769296349626388/wp6144011-lego-minecraft-wallpapers.png");
     background-size: cover;
     font-family: Georgia, Times, sans-serif;
     line-height: 1.4em;
     margin: 0px; 
     background-attachment: fixed;
+    background-image: url("https://cdn.discordapp.com/attachments/927807364835455027/930769296349626388/wp6144011-lego-minecraft-wallpapers.png");
     
 }
 .wrapper {
@@ -29,40 +29,20 @@ h1 {
     height: 130px;
     margin: 0px;
 }
-.nav, footer {
+footer {
     clear: both;
     color: #ffffff;
-    background-color: #333333;
-    height: 30px;
+    overflow: hidden;
+    background: linear-gradient(45deg, #424242, #161616, #979797, #666666);
+	background-size: 200% 200%;
+	animation: gradient 15s ease infinite;
+    height: 100%;
     text-decoration: none;
     font-size: 15px;
     text-align: center;
 
 }
-.nav .ul {
-    margin:  opx;
-    padding:  5px 0px 10px 0px;
-}
-.nav .li {
-    display: inline;
-    margin-right: 15px;
-    margin-left: 19px;
-}
-.nav .li a {
-    color: #ffffff;
-    padding: 7px 10px 5px 10px;
-}
-.nav .li a:hover {
-    color: #333333;
-    background-color: #64cc33;
-    text-shadow: 3px 1px 6px darkgreen;
 
-}
-.nav .li a.current {
-    color: #333333;
-    text-shadow: 3px 1px 6px darkgreen;
-    background-color: #64cc33;
-}
 section.courses {
     float:  left;
     width: 659px;
@@ -122,45 +102,223 @@ aside h2 {
     padding: 30px 0px 10px 0px;
     color: #de6581;
 }
-footer {
-    font-size: 80%;
+.navbar {
+    overflow: hidden;
+    background: linear-gradient(45deg, #424242, #161616, #979797, #666666);
+	background-size: 200% 200%;
+	animation: gradient 15s ease infinite;
+    height: 100%;
+
 }
-.dropdown {
+
+.navbar a {
     float: left;
-    margin-left: 30px;
-    margin-right: -10px;
-}
-.dropdown .dropbtn {
-    font-size: 16px;  
+    font-size: 16px;
     color: white;
+    animation: gradient 15s ease infinite;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+.navbar a:hover, .dropdown:hover .dropbtn {
+    background-color: #64cc33;
+}
+.navbar .current{
+    background-color: #64cc33;
+}
+.navbar .ul {
+    margin-left: 30px;
+}
+.navbar .li{
+	background-size: 200% 200%;
+	animation: gradient 15s ease infinite;
+    height: 100%;
+    display: inline;
+    margin-left: 30px;
+}
+.navbar .li a {
+    color: #ffffff;
+    padding: 7px 10px 5px 10px;
+}
+.navbar a:hover {
+    color: #ffffff;
+    background-color: #ffffff77;
+    text-shadow: 2px 1px 3px rgba(0, 0, 0, 0.452);
+
+}
+.navbar a.current {
+    color: #ffffff;
+    background-color: #ffffff77;
+}
+
+.li .dropdown {
+    float: left;
+    overflow: hidden;
+}
+
+.li .dropdown .dropbtn {
+    font-size: 16px;  
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
     background-color: inherit;
     font-family: inherit;
-    margin: 0px;
+    margin: 0;
 }
-.dropdown:hover .dropbtn {
-    background-color: #64cc33;
-    padding: 7px 0px 7px 0px;
-}
+
 .dropdown-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    min-width: 160px;
     z-index: 1;
-    margin: 2px 19px;
+    margin-top: 34.5px;
+    margin-left: 30px;
 }
-.dropdown-content a {
-    float: center;
+
+.li .dropdown-content a {
+    float: none;
     color: black;
-    right: auto;
-    padding: 7px 8px;
+    padding: 12px 16px;
+    text-decoration: none;
     display: block;
     text-align: left;
 }
-.dropdown-content a:hover ,.dropbtn{
-    background-color: #ddd;
+
+.dropdown-content a:hover {
+    background-color: rgba(224, 224, 224, 0.651);
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
+}
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+
+.circles{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.circles li{
+    position: absolute;
+    display: block;
+    list-style: none;
+    width: 20px;
+    height: 20px;
+    overflow: hidden;
+    background: linear-gradient(45deg, #9bff49, #20ff6a, #2bdab4, #ffffff);
+	background-size: 200% 200%;
+    animation: animate 25s linear infinite;
+    bottom: -350px;
+    
+}
+
+.circles li:nth-child(1){
+    left: 25%;
+    width: 80px;
+    height: 80px;
+    animation-delay: 0s;
+}
+
+
+.circles li:nth-child(2){
+    left: 10%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 2s;
+    animation-duration: 12s;
+}
+
+.circles li:nth-child(3){
+    left: 70%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 4s;
+}
+
+.circles li:nth-child(4){
+    left: 40%;
+    width: 60px;
+    height: 60px;
+    animation-delay: 0s;
+    animation-duration: 18s;
+}
+
+.circles li:nth-child(5){
+    left: 65%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 0s;
+}
+
+.circles li:nth-child(6){
+    left: 75%;
+    width: 110px;
+    height: 110px;
+    animation-delay: 3s;
+}
+
+.circles li:nth-child(7){
+    left: 35%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 7s;
+}
+
+.circles li:nth-child(8){
+    left: 50%;
+    width: 25px;
+    height: 25px;
+    animation-delay: 15s;
+    animation-duration: 45s;
+}
+
+.circles li:nth-child(9){
+    left: 20%;
+    width: 15px;
+    height: 15px;
+    animation-delay: 2s;
+    animation-duration: 35s;
+}
+
+.circles li:nth-child(10){
+    left: 85%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 0s;
+    animation-duration: 11s;
+}
+
+
+
+@keyframes animate {
+
+    0%{
+        transform: translateY(0) rotate(0deg);
+        opacity: 1;
+        border-radius: 0;
+    }
+
+    100%{
+        transform: translateY(-1000px) rotate(720deg);
+        opacity: 0;
+        border-radius: 50%;
+    }
+
 }
