--- a/downloadpage.css
+++ b/downloadpage.css
@@ -1,14 +1,11 @@
-.abs, h2:after, .cards .card figcaption, .cards .card:after, .news .card figcaption, .news .card:after, .news .article figcaption {
+h2:after, .card figcaption, .card:after, .news .article figcaption {
     position: absolute;
 }   
-.rel, h2, h2 strong, .cards .card, .news .card, .news .article {
+h2, h2 strong, .card, .news .article {
   position: relative;
 }
-.df, .cards, .news {
+.cards, .news {
   display: flex;
-}
-.vm, h2, h2 strong, h2 span {
-  vertical-align: middle;
 }
 h2 strong {
   z-index: 2;
@@ -22,8 +19,7 @@ h2 strong {
 }
 .cards{
   flex-flow: row wrap;
-  margin-left: 80px;
-  margin-right: 90px;
+  justify-content: center;
   margin-top: 20px;
   row-gap: 1rem;
   column-gap: 0.2rem;
@@ -32,10 +28,10 @@ h2 strong {
 }
 .news{
   flex-flow: row wrap;
-  margin-left: 30px;
+  justify-content: center;
   cursor: pointer;
 }
-.cards > .card {
+.card {
   margin: 10px;
   width: 170px;
   height: 290px;
@@ -47,18 +43,17 @@ h2 strong {
   transition: 0.3s;
   border-radius: 12px;
 }
-.cards .card img, .news .card img {
+.card img{
   width: 100%;
   min-height: 100%;
 }
-.cards .card figcaption, .news .card figcaption {
+.card figcaption{
   bottom: 0;
   left: 0;
   right: 0;
   padding: 20px;
   padding-bottom: 10px;
   font-size: 18px;
-  text-shadow: rgb(0, 0, 0) 1px 1px 2px;
   font-family: 'Segoe UI';
   font-weight: 600;
   background: none;
@@ -66,7 +61,7 @@ h2 strong {
   transform: translateY(100%);
   transition: 0.3s;
 }
-.cards .card:after {
+.card:after {
   content: '';
   z-index: 10;
   width: 200%;
@@ -78,14 +73,15 @@ h2 strong {
   background: linear-gradient(to top, transparent, #fff 15%, rgba(255,255,255,0.5));
   transition: 0.3s;
 }
-.cards .card:hover, .news .card:hover, .cards .card:focus, .news .card:focus, .cards .card:active, .news .card:active {
+.card:hover {
   box-shadow: 0 8px 16px 3px rgba(0,0,0,0.6);
   transform: translateY(-3px) scale(1.06) rotateX(15deg);
 }
-.cards .card:hover figcaption, .news .card:hover figcaption, .cards .card:focus figcaption, .news .card:focus figcaption, .cards .card:active figcaption, .news .card:active figcaption {
+.card:hover figcaption {
   transform: none;
+  text-shadow: rgb(0, 0, 0) 1px 1px 2px;
 }
-.cards .card:hover:after, .news .card:hover:after, .cards .card:focus:after, .news .card:focus:after, .cards .card:active:after, .news .card:active:after {
+.card:hover:after {
   transform: rotate(25deg);
   top: -40%;
   opacity: 0.15;
@@ -99,15 +95,15 @@ h2 strong {
   border-radius: 12px;
   transition: 0.3s;
 }
-.news .article:hover {
+.article:hover {
   transform: scale(1.02);
 }
-.news .article img {
+.article img {
   width: 100%;
   min-height: 100%;
   transition: 0.2s;
 }
-.news .article figcaption {
+.article figcaption {
   font-size: 14px;
   text-shadow: 0 1px 0 rgba(51,51,51,0.3);
   color: #fff;
@@ -122,17 +118,17 @@ h2 strong {
   transform: scale(1.15);
   transition: 0.2s;
 }
-.news .article figcaption h3 {
+.article figcaption h3 {
   color: #65b7ff;
   font-size: 18px;
   margin-bottom: 0;
   font-weight: bold;
 }
-.news .article:hover img, .news .article:focus img, .news .article:active img {
+.article:hover img {
   filter: blur(10px);
   transform: scale(0.97);
 }
-.news .article:hover figcaption, .news .article:focus figcaption, .news .article:active figcaption {
+.article:hover figcaption {
   opacity: 1;
   transform: none;
 }
