--- a/login_page.css
+++ b/login_page.css
@@ -43,7 +43,7 @@ footer {
 }
 
 section.courses {
-    font-family: sans-serif;
+    font-family: "Noto Sans", sans-serif;
     background-color: #1F1F1F;
     float:  left;
     width: 940px;
@@ -51,26 +51,40 @@ section.courses {
 }
 
 .abandonallhope {
-    color: #fff;
+    font-size: 15px;
+    color: #ffffff;
     font-style: italic;
 }
 
 .loginbox {
     margin: 0;
-    justify-content: center;
     text-align: center;
 }
 
 input {
-    margin-bottom: 0.5px;
+    font-size: 14px;
     border: none;
-    background-color: #4D4D4D;
-    padding: 10px;
     width: 280px;
     height: 35px;
+    padding: 10px;
+    background-color: #4D4D4D;
 }
 
+.input:first-of-type input {
+    margin: auto;
+    margin-bottom: 0.3px;
+    background-color: #4D4D4D;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+}
 
+.input:not(:first-of-type) input {
+    margin: auto;
+    margin-top: 0.3px;
+    background-color: #4D4D4D;
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+}
 
 button {
     color: white;
@@ -81,7 +95,7 @@ button {
     border: none;
     border-radius: 3px;
     padding: 1px 6px;
-    width: 296px;
+    width: 299px;
     height: 50px;
 }
 
@@ -99,7 +113,9 @@ button:hover {
     color: white;
 }
 
-
+.register a:hover, .reset a:hover {
+    color: #ED2553;
+}
 
 .belowlogin {
     justify-content: center;
