--- a/login_page.css
+++ b/login_page.css
@@ -2,7 +2,7 @@ body {
     color: #666666;
     background-color: #f9f8f6;
     background-size: cover;
-    font-family: Georgia, Times, sans-serif;
+    font-family: Georgia, Times, "Noto Sans", sans-serif;
     line-height: 1.4em;
     margin: 0px; 
     background-attachment: fixed;
@@ -62,6 +62,7 @@ section.courses {
 }
 
 input {
+    font-family: "Noto Sans", sans-serif;
     font-size: 14px;
     border: none;
     width: 280px;
@@ -88,6 +89,7 @@ input {
 
 button {
     color: white;
+    font-family: "Noto Sans", sans-serif;
     font-size: 16.8px;
     font-weight: 700;
     margin: 15px 0px 5px; 
@@ -142,6 +144,7 @@ figure {
     height: 190px;
     padding: 5px;
     margin: 20px;
+    margin-bottom: 150px;
     border: 0px solid #eeeeee;
 
 }
