--- a/contactus.css
+++ b/contactus.css
@@ -6,7 +6,7 @@ body {
     line-height: 1.4em;
     margin: 0px; 
     background-attachment: fixed;
-    background-image: url("https://cdn.discordapp.com/attachments/927807364835455027/930769296349626388/wp6144011-lego-minecraft-wallpapers.png");
+    background-image: url("https://i.kym-cdn.com/entries/icons/original/000/034/421/cover1.jpg");
 }
 .wrapper {
     width: 940px;
