--- a/Sp_css_result.css
+++ b/Sp_css_result.css
@@ -4,19 +4,20 @@
     position: absolute;
     float: center; 
     left: 50%;    
-    margin-top: 300px;
+    margin-top: 250px;
     
     /* animation <- -> */
     transform: translate(-50%, -50%);    
 
     /* property */
-    height: 400px;
+    height: 300px;
     width: 800px;
     background: #f2f2f2;
     overflow: hidden;
     border-radius: 20px;
     cursor: pointer;
-    box-shadow: 0 0 20px 8px #d0d0d0;   
+    box-shadow: 0 0 20px 8px #d0d0d0;  
+    padding: 30px; 
     
   }
 /*Context Setting*/  
