--- a/register.css
+++ b/register.css
@@ -88,7 +88,7 @@ input {
     border-top-right-radius: 2px;
 }
 
-.input:not(:first-of-type) input {
+.input:last-of-type input {
     margin: auto;
     margin-top: 0.3px;
     background-color: #4D4D4D;
@@ -167,6 +167,7 @@ figcaption {
     font-size: 100%;
     text-align: center;
 }
+/*
 aside {
     width: 230px;
     float: left;
@@ -181,6 +182,7 @@ aside section a:hover {
     color: #985d6a;
     background-color: #efefef;
 }
+*/
 a {
     color: #de6581;
     text-decoration: #efefef;
